syntax = "proto3";
package grpc;

option java_multiple_files = true;
option java_package = "grpc.hello";
option java_outer_classname = "EchoServiceProto";


message EchoRequest{
    string message = 1;
}

message EchoResponse{
    string message = 1;
}
message  summRequest{
    int32 num1=1;
    int32 num2=2;
}
message summResponse{
    int32 res=1;
}
message SummArrayRequest{
    repeated int32 list=1;
}
message SummArrayResponse{
    int32 res=1;
}
service EchoService{
    rpc echo(EchoRequest) returns (EchoResponse){}
    rpc summ(summRequest) returns(summResponse){}
    rpc sumarray(SummArrayRequest) returns(SummArrayResponse){}
}
//1. Добавить в hello.proto описание 2х типов сообщений запроса и ответа в блоках message.